...
        <Tabs.Screen
          name="settings"
          options={{
            title: 'Settings',
            tabBarIcon: ({ color }) => <Settings color={color} />,
            tabBarButton: (props) => (
              <Pressable {...props} testID="tab-settings" />
            ),
          }}
        />
      </Tabs>
    </tg.YStack>
  );
...
