...
        flex={1}
        style={{
          borderWidth: 1,
          borderColor: 'red',
        }}
        blurOnSubmit={false}
        testID="new-task-name"
        onSubmitEditing={createTask}
        onKeyPress={handleKeyPress}
      />
      <tg.Button onPress={createTask} testID="new-task-submit">
        Add
      </tg.Button>
    </tg.XStack>
  ) : (
    <tg.YStack gap="$4" ai="center">
      <tg.H3>Free Limit Reached</tg.H3>
...
